--- a/templates/index.html
+++ b/templates/index.html
@@ -1,65 +1,77 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
-    <meta charset="UTF-8">
-    <title>DC 311</title>
 
-    <!-- Leaflet JS & CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css"
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>DC 311</title>
+
+  <!-- Leaflet JS & CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css"
     integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-    crossorigin=""/>
-    <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"
+    crossorigin="" />
+  <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"
     integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
     crossorigin=""></script>
 
-    <!-- Bootstrap-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <!-- Bootstrap-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <!-- Plotly-->
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <!-- Plotly-->
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
-    <!-- d3 JS -->
-    <!-- <script src="https://d3js.org/d3.v4.min.js"></script> -->
-    <!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
+  <!-- Chart JS-->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
 
-    <!-- Our CSS -->
-    <link rel="stylesheet" type="text/css" href="static/css/style.css">
+  <!-- d3 JS -->
+  <!-- <script src="https://d3js.org/d3.v4.min.js"></script> -->
+  <script src="https://d3js.org/d3.v5.min.js"></script>
 
-  </head>
-  <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 jumbotron text-center">
-          <h1>DC 311 Complaints by Ward</h1>
-          <p>Use the interactive charts below to explore the dataset</p>
+  <!-- Our CSS -->
+  <link rel="stylesheet" type="text/css" href="static/css/style.css">
+
+</head>
+
+<body>
+  <nav class="col-md-12 navbar navbar-dark">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand">Beltway Blues: Simple Dashboard of 311 Calls in Washington D.C.</a>
+      </div>
+      <ul class="nav navbar-nav navbar-right">
+        <form>
+          <select class="form-control" id="selDataset" onchange="optionChanged(this.value)"></select>
+        </form>
+      </ul>
+    </div>
+  </nav>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <div id="map-bx">
+          <div id="map"></div>
         </div>
       </div>
-      <div class="row">
-        <div id="map"></div>
-      </div>
-      <div class = "row">
-        <div class="col-md-5">
-          <div class="well"><h5>SELECT Year:</h5><select id="selDataset" onchange="optionChanged(this.value)"></select></div>
-          <div class="panel panel-primary">
-            <div class="panel-heading"><h3 class="panel-title">Sample MetaData</h3></div>
-            <div id="sample-metadata" class="panel-body"></div>
-          </div>
+      <div class="col-md-6">
+        <div>
+          <canvas id="plot"></canvas>
         </div>
       </div>
-      <div class = "row">
-        <div class="col-md-5">
-            <div id="plot"></div>
+      <div class="col-md-12">
+        <div>
+          <canvas id="pie"></canvas>
         </div>
-      </div>
-      <div class="col-md-5">
-          <div id="pie"></div>
       </div>
     </div>
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
-    <script type="text/javascript" src="static/js/config.js"></script>
-    <script type="text/javascript" src="static/js/logic.js"></script>
-    <script type="text/javascript" src="static/js/app.js"></script>
+  </div>
 
-  </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
+  <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.min.js"></script>
+  <script type="text/javascript" src="static/js/config.js"></script>
+  <script type="text/javascript" src="static/js/app.js"></script>
+
+</body>
+
 </html>
